Change version 1.0.0 -> 1.0.0-beta in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "odmozdzacze",
-  "version": "1.0.0",
+  "version": "1.0.0-beta",
   "description": "Odmozdzacze for desktop.",
   "main": "main.js",
   "scripts": {
